--- a/Products.html
+++ b/Products.html
@@ -9,12 +9,16 @@
 <body>
     <!--Created by Jubayer Ahmed Jidny, ID: 2021086-->
     <header>
-        <div class="logo">Nibo.com</div>
+        <div class="logo">
+            <!-- Logo Section -->
+            <img src="logo.png" alt="Nibo.com Logo">
+            <h1>Nibo.com</h1>
+        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Products.html">Products</a></li>
-                <li><a href="Contact.html">Contact Us</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="Products.html" target="_blank">Products</a></li>
+                <li><a href="Contact.html" target="_blank">Contact Us</a></li>
             </ul>
         </nav>
     </header>
