--- a/Contact.html
+++ b/Contact.html
@@ -9,14 +9,34 @@
 <body>
     <!--Created by Jubayer Ahmed Jidny, ID: 2021086-->
     <header>
-        <div class="logo">Nibo.com</div>
+        <div class="logo">
+            <!-- Logo Section -->
+            <img src="logo.png" alt="Nibo.com Logo">
+            <h1>Nibo.com</h1>
+        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Products.html">Products</a></li>
-                <li><a href="Contact.html">Contact Us</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="Products.html" target="_blank">Products</a></li>
+                <li><a href="Contact.html" target="_blank">Contact Us</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="contact-info">
+            <h2>Contact Us</h2>
+            <p>If you have any questions, please reach out to us at:</p>
+            <p>Email: support@nibo.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <div class="images">
+                <img src="maps.avif" alt="Contact Image 1">
+                <img src="Social.jpg" alt="Contact Image 2">
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Nibo.com - Your trusted tech shop for the latest gadgets and accessories.</p>
+    </footer>
 </body>
 </html>
