--- a/Products.html
+++ b/Products.html
@@ -22,5 +22,17 @@
             </ul>
         </nav>
     </header>
-</body>
-</html>
+
+    <main class="grid-container">
+        <div class="product-item">
+            <img src="mobile1.jpg" alt="Mobile 1">
+            <div class="product-info">
+                <h3>Iphone 15 plus</h3>
+                <p><strong>Price:</strong> $499</p>
+                <p><strong>Availability:</strong> In Stock</p>
+                <p><strong>Color:</strong> Black</p>
+                <p><strong>Features:</strong> The Apple iPhone 15 Plus showcases an attractive and solid design, accompanied by a generously sized display featuring a dynamic island. Its A16 processor ensures seamless performance, while its excellent camera captures moments vividly. With an outstanding battery life, you can stay connected throughout the day. The inclusion of a Type-C charger adds convenience to recharging. Additionally, it offers essential emergency services that could be crucial in life-saving situations, making it a versatile and reliable smartphone choice.</p>
+            </div>
+        </div>
+        </main>
+        </body>
