--- a/Products.html
+++ b/Products.html
@@ -25,13 +25,24 @@
 
     <main class="grid-container">
         <div class="product-item">
-            <img src="mobile1.jpg" alt="Mobile 1">
+            <img src="iphone.jpg" alt="Mobile 1">
             <div class="product-info">
                 <h3>Iphone 15 plus</h3>
                 <p><strong>Price:</strong> $499</p>
                 <p><strong>Availability:</strong> In Stock</p>
                 <p><strong>Color:</strong> Black</p>
                 <p><strong>Features:</strong> The Apple iPhone 15 Plus showcases an attractive and solid design, accompanied by a generously sized display featuring a dynamic island. Its A16 processor ensures seamless performance, while its excellent camera captures moments vividly. With an outstanding battery life, you can stay connected throughout the day. The inclusion of a Type-C charger adds convenience to recharging. Additionally, it offers essential emergency services that could be crucial in life-saving situations, making it a versatile and reliable smartphone choice.</p>
+            </div>
+        </div>
+
+        <div class="product-item">
+            <img src="Iphone12.jpg" alt="Iphone 12">
+            <div class="product-info">
+                <h3>Iphone 12</h3>
+                <p><strong>Price:</strong> $599</p>
+                <p><strong>Availability:</strong> Out of Stock</p>
+                <p><strong>Color:</strong> White</p>
+                <p><strong>Features:</strong> iPhone 12 is a brand new smartphone from Apple where Apple introduces some extraordinary features. It holds a super powerful chip along with an advanced dual‑camera system. The phone covers with a Ceramic Shield front that's tougher than any smartphone glass. and a bright as well as a beautiful OLED display.</p>
             </div>
         </div>
         </main>
