--- a/Products.html
+++ b/Products.html
@@ -41,8 +41,21 @@
                 <h3>Iphone 12</h3>
                 <p><strong>Price:</strong> $599</p>
                 <p><strong>Availability:</strong> Out of Stock</p>
-                <p><strong>Color:</strong> White</p>
+                <p><strong>Color:</strong> Green</p>
                 <p><strong>Features:</strong> iPhone 12 is a brand new smartphone from Apple where Apple introduces some extraordinary features. It holds a super powerful chip along with an advanced dual‑camera system. The phone covers with a Ceramic Shield front that's tougher than any smartphone glass. and a bright as well as a beautiful OLED display.</p>
+            </div>
+        </div>
+
+        <div class="product-item">
+            <img src="mac1.jpg" alt="Laptop 1">
+            <div class="product-info">
+                <h3>MacBook Air M2 13.6-inch 8/256GB
+                </h3>
+                <p><strong>Price:</strong> $999</p>
+                <p><strong>Availability:</strong> In Stock</p>
+                <p><strong>Color:</strong> Gold</p>
+                <p><strong>Features:</strong> MacBook Air M2 8/256GB 13.6-inch
+                    Introducing the Apple MacBook Air M2 2022, a revolutionary ultraportable laptop that combines incredible power and effortless portability. Powered by the avant grade, with enhanced GPU and CPU capabilities, this laptop delivers exceptional performance for demanding tasks. Its lightweight design makes it a breeze to carry wherever you go, while the improved camera ensures crystal-clear video calls and content creation. With optimized battery life and convenient MagSafe charging, the MacBook Air M2 2022 is the ultimate companion for on-the-go productivity and entertainment.</p>
             </div>
         </div>
         </main>
