--- a/Products.html
+++ b/Products.html
@@ -58,5 +58,21 @@
                     Introducing the Apple MacBook Air M2 2022, a revolutionary ultraportable laptop that combines incredible power and effortless portability. Powered by the avant grade, with enhanced GPU and CPU capabilities, this laptop delivers exceptional performance for demanding tasks. Its lightweight design makes it a breeze to carry wherever you go, while the improved camera ensures crystal-clear video calls and content creation. With optimized battery life and convenient MagSafe charging, the MacBook Air M2 2022 is the ultimate companion for on-the-go productivity and entertainment.</p>
             </div>
         </div>
-        </main>
-        </body>
+        <div class="product-item">
+            <img src="Mac2.jpg" alt="Laptop 2">
+            <div class="product-info">
+                <h3>MacBook Pro M3 Pro 14-Inch 18GB/512GB 11 Core CPU 14 Core GPU
+                </h3>
+                <p><strong>Price:</strong> $1299</p>
+                <p><strong>Availability:</strong> In Stock</p>
+                <p><strong>Color:</strong> Black</p>
+                <p><strong>Features:</strong> With Apple’s latest 14.2-inch MacBook M3 Pro, you get a stunning Liquid Retina XDR Display impressing with 3024x1964 resolution and a peak brightness of 1600 nits. Do better in creative applications from Apple M3 Pro chip powers an 11-core CPU, 14-core GPU, and a 16-core Neural Engine for exceptional machine learning productivity. Seamlessly multitask with 18GB RAM and a swift performing 512GB internal SSD. Enjoy user-friendly features like the Backlit Magic Keyboard, Touch ID, and Force Touch Trackpad. Elevate your audio experience with a High Fidelity Six Speaker system and Dolby Atmos support. While keeping a lightweight body of just 1.61 kilograms that Macbook Pro gives you up to 12 hours wireless web surfing capability.</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Nibo.com - Your trusted tech shop for the latest gadgets and accessories.</p>
+    </footer>
+</body>
+</html>
