--- a/Contact.html
+++ b/Contact.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nibo.com - Contact Us</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <div class="font2"><link href="https://fonts.googleapis.com/css2?family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Created by Jubayer Ahmed Jidny, ID: 2021086-->
+    <!--Created by Md. Jubayer Ahmed Jidny, ID: 2021086-->
     <header>
         <div class="logo">
             <!-- Logo Section -->
-            <img src="logo.png" alt="Nibo.com Logo">
+            <img src="Logo.png" alt="Nibo.com Logo">
             <h1>Nibo.com</h1>
         </div>
         <nav>
@@ -40,5 +40,6 @@
     <footer>
         <p>&copy; 2024 Nibo.com - Your trusted tech shop for the latest gadgets and accessories.</p>
     </footer>
+</div>
 </body>
 </html>
