--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Created by Jubayer Ahmed Jidny, ID: 2021086-->
+    <!--Created by Md. Jubayer Ahmed Jidny, ID: 2021086-->
     <header>
         <div class="logo">
             <!-- Logo Section -->
-            <img src="logo.png" alt="Nibo.com Logo">
+            <img src="Logo.png" alt="Nibo.com Logo">
             <h1>Nibo.com</h1>
         </div>
         <nav>
@@ -37,7 +37,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Nibo.com - Your trusted source for tech accessories</p>
+        <p>&copy; 2024 Nibo.com - Your trusted tech shop for the latest gadgets and accessories.</p>
     </footer>
 </body>
 </html>
