--- a/Products.html
+++ b/Products.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Created by Jubayer Ahmed Jidny, ID: 2021086-->
+    <!--Created by Md. Jubayer Ahmed Jidny, ID: 2021086-->
     <header>
         <div class="logo">
             <!-- Logo Section -->
-            <img src="logo.png" alt="Nibo.com Logo">
+            <img src="Logo.png" alt="Nibo.com Logo">
             <h1>Nibo.com</h1>
         </div>
         <nav>
